ColorLabs17/doc/logfile.txt
Class documentation
<---- javadoc command: ---->
C:\Program Files\BlueJ\jdk\bin\javadoc.exe
-author
-version
-nodeprecated
-package
-Xdoclint:none
-noindex
-notree
-nohelp
-nonavbar
-source
11
-classpath
C:\Program Files\BlueJ\lib\bluejcore.jar;C:\Program Files\BlueJ\lib\junit-jupiter-5.5.2.jar;C:\Program Files\BlueJ\lib\junit-jupiter-api-5.5.2.jar;C:\Program Files\BlueJ\lib\junit-jupiter-engine-5.5.2.jar;C:\Program Files\BlueJ\lib\junit-jupiter-migrationsupport-5.5.2.jar;C:\Program Files\BlueJ\lib\junit-jupiter-params-5.5.2.jar;C:\Program Files\BlueJ\lib\junit-platform-commons-1.5.2.jar;C:\Program Files\BlueJ\lib\junit-platform-console-1.5.2.jar;C:\Program Files\BlueJ\lib\junit-platform-console-standalone-1.5.2.jar;C:\Program Files\BlueJ\lib\junit-platform-engine-1.5.2.jar;C:\Program Files\BlueJ\lib\junit-platform-launcher-1.5.2.jar;C:\Program Files\BlueJ\lib\junit-platform-reporting-1.5.2.jar;C:\Program Files\BlueJ\lib\junit-platform-runner-1.5.2.jar;C:\Program Files\BlueJ\lib\junit-platform-suite-api-1.5.2.jar;C:\Program Files\BlueJ\lib\junit-platform-testkit-1.5.2.jar;C:\Program Files\BlueJ\lib\junit-quickcheck-core-0.9.jar;C:\Program Files\BlueJ\lib\junit-vintage-engine-5.5.2.jar;C:\Program Files\BlueJ\lib\hamcrest-core-1.3.jar;C:\Program Files\BlueJ\lib\hamcrest-library-1.3.jar;C:\Program Files\BlueJ\lib\lang-stride.jar;C:\Program Files\BlueJ\lib\javafx\lib\javafx.base.jar;C:\Program Files\BlueJ\lib\javafx\lib\javafx.controls.jar;C:\Program Files\BlueJ\lib\javafx\lib\javafx.fxml.jar;C:\Program Files\BlueJ\lib\javafx\lib\javafx.graphics.jar;C:\Program Files\BlueJ\lib\javafx\lib\javafx.media.jar;C:\Program Files\BlueJ\lib\javafx\lib\javafx.properties.jar;C:\Program Files\BlueJ\lib\javafx\lib\javafx.swing.jar;C:\Program Files\BlueJ\lib\javafx\lib\javafx.web.jar;C:\Users\lknathan\Desktop\APCS\colorlabs21-lakshyaa-nathan\ColorLabs17\+libs\mediaComp.jar;C:\Users\lknathan\Desktop\APCS\colorlabs21-lakshyaa-nathan\ColorLabs17
-d
C:\Users\lknathan\Desktop\APCS\colorlabs21-lakshyaa-nathan\ColorLabs17\doc
-encoding
UTF-8
-charset
UTF-8
C:\Users\lknathan\Desktop\APCS\colorlabs21-lakshyaa-nathan\ColorLabs17\Pixel.java
<---- end of javadoc command ---->
Loading source file C:\Users\lknathan\Desktop\APCS\colorlabs21-lakshyaa-nathan\ColorLabs17\Pixel.java...
Constructing Javadoc information...
C:\Users\lknathan\Desktop\APCS\colorlabs21-lakshyaa-nathan\ColorLabs17\Pixel.java:12: error: cyclic inheritance involving Pixel
public class Pixel extends SheparFaireyLab
       ^
C:\Users\lknathan\Desktop\APCS\colorlabs21-lakshyaa-nathan\ColorLabs17\Pixel.java:18: error: modifier private not allowed here
  private DigitalPicture picture;
                         ^
C:\Users\lknathan\Desktop\APCS\colorlabs21-lakshyaa-nathan\ColorLabs17\Pixel.java:21: error: modifier private not allowed here
  private int x; 
              ^
C:\Users\lknathan\Desktop\APCS\colorlabs21-lakshyaa-nathan\ColorLabs17\Pixel.java:24: error: modifier private not allowed here
  private int y; 
              ^
4 errors
